Background image set to no repeat

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ body{
 }
 
 .background-img{
-    background: url(../assets/images/background-pattern-mobile.svg) ;
+    background: url(../assets/images/background-pattern-mobile.svg) no-repeat center;
     height: 30%;
     width: 100%;
     position: absolute;
@@ -43,7 +43,7 @@ body{
     border-radius: .5rem;
     padding: 1.5rem;
     position: absolute;
-    top: 6.5rem;
+    top: 7.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -130,12 +130,12 @@ footer{
     color: hsl(228, 45%, 44%); 
 }
 
-@media (width > 720px){
+@media (width >= 400px){
     body{
         font-size: 16px;
     }
     .background-img{
-        background: url(../assets/images/background-pattern-desktop.svg) ;
+        background: url(../assets/images/background-pattern-desktop.svg) no-repeat center;
     }
    
 }
